# SPL_HW3_client

./: CMakeLists.txt  README.md  makefile
include/: ClientToServerEncoder.h  ConnectionHandler.h  ServerToClientDecoder.h  clientToServerEncoder.h  connectionHandler.h  serverToClientDecoder.h
src/: BGSClient.cpp  BGSclient.cpp  ClientRunner.cpp  ClientToServerEncoder.cpp  ConnectionHandler.cpp  ServerToClientDecoder.cpp  clientToServerEncoder.cpp  connectionHandler.cpp  echoClient.cpp  serverToClientDecoder.cpp
